[package]
name = "gugalanna-html"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gugalanna-dom.workspace = true
thiserror.workspace = true
log.workspace = true
string_cache.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
