[package]
name = "gugalanna-layout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gugalanna-dom.workspace = true
gugalanna-style.workspace = true
thiserror.workspace = true
log.workspace = true
smallvec.workspace = true

[dev-dependencies]
gugalanna-css.workspace = true
gugalanna-html.workspace = true
