[package]
name = "gugalanna-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gugalanna-dom.workspace = true
gugalanna-layout.workspace = true
gugalanna-style.workspace = true
gugalanna-css.workspace = true
thiserror.workspace = true
log.workspace = true
fontdue.workspace = true
image.workspace = true
sdl2.workspace = true
